git action workflow with docker

--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>mybank-image-new</finalName>
     </build>
 
 </project>
