user reg on going

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,27 +12,17 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 #server properties
-#server.port=8082
+server.port=8082
 server.error.include-message=always
 server.error.include-binding-errors=always
 
 #app properties
 app.jwt_secret=JWTSecretKey
 
-
-
-
-
-
-
-
-
-
+#spring.profiles.active=git
 
 
 #Swagger configuration
-
-
 
 #Email configuration
 spring.mail.host=smtp.gmail.com
@@ -41,3 +31,35 @@ spring.mail.username=fabinonso@gmail.com
 spring.mail.password=chukwunonso22
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+#Flutter API
+app.FLW_SECRET_KEY=FLWSECK_TEST-c1ea07163f99779f7ebe5079d5c0f774-X
+
+#URL for Creation of Virtual Wallet
+app.create_wallet=https://api.flutterwave.com/v3/virtual-account-numbers
+app.verify_transaction_endpoint=https://api.flutterwave.com/v3/transactions/
+app.WEBHOOK_VERIFY_HASH=yfsh4bhdbb
+
+#VTPASS keys
+app.VTPASS_API_KEY= f0f29969733ab99ffefb331978e9127f
+app.VTPASS_Public_Key= PK_4250a08f9053ad1ecca5534db8ae097b1c31d4623f0
+app.VTPASS_Secret_Key= SK_247a935a267c120235c2cb8e10258c5be41d915db3e
+
+#VTPASS endpoints
+app.buy_airtime_endpoint=https://sandbox.vtpass.com/api/pay
+
+#Flutterwave base url
+app.flutter_base_url=https://api.flutterwave.com/v3/
+
+#URL to Get All Banks
+app.flutter_endpoint_to_fetch_all_banks=banks/NG
+
+#URL to Get transfer fee
+app.flutter_endpoint_to_fetch_transfer_fee=transfers/fee
+
+#URL to transfer to bank
+app.flutter_endpoint_to_transfer_to_bank=transfers
+
+#URL to retry transfer to bank
+app.flutter_endpoint_to_retry_transfer_to_bank=transfers/{id}/retries
+
