--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -63,3 +63,6 @@ app.flutter_endpoint_to_transfer_to_bank=transfers
 #URL to retry transfer to bank
 app.flutter_endpoint_to_retry_transfer_to_bank=transfers/{id}/retries
 
+#URL for fetching data variations
+app.fetch_data_variations=https://sandbox.vtpass.com/api/service-variations?
+
